@@ -1,3 +1,7 @@
+2001-02-20  Michael Meeks  <michael@ximian.com>
+
+	* gtkdoc-mktmpl.in: s/TRUE/1/
+
 2001-02-19  Damon Chaplin  <damon@ximian.com>
 
 	* gtkdoc-mktmpl.in (UpdateTemplates): fixed bug handling the $changed
